--- a/src/sass/_hw_styles.scss
+++ b/src/sass/_hw_styles.scss
@@ -1,6 +1,7 @@
 img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 .hidden {
@@ -12,6 +13,11 @@ img {
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 16px;
+}
+
+.img-container {
+  min-width: 400px;
+  min-height: 200px;
 }
 
 .breed-select {
